feat: add cargo filter to findAll method in CandidatoService and CandidatoController